--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Todo;Integrated Security=SSPI;;Trust Server Certificate=true"
+    "DefaultConnection": "Server=tcp:tododtbase.database.windows.net,1433;Initial Catalog=Todo;Persist Security Info=False;User ID=ITITIU18047@student.hcmiu.edu.vn;Password=1029384756Qpwoeiruty;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
